2001-09-28  J. Brobecker <brobecker@gnat.com>

	* som.c (som_write_symbol_strings): Fix incorrect type of
	current_offset to match the function definition. Fixes a build
	failure on HPUX-11.00.

2001-09-28  Richard Henderson  <rth@redhat.com>

	* section.c (SEC_ARCH_BIT_0): New; replace unused SEC_BALIGN.
	* bfd-in2.h: Rebuild.

2001-09-28  Alan Modra  <amodra@bigpond.net.au>

	* elf64-x86-64.c (elf64_x86_64_reloc_type_lookup): Don't map bfd
	reloc code using x86_64_reloc_map.

	* elf32-hppa.c (elf32_hppa_check_relocs): Update comment since we
	no longer allocate here.  Localise some vars to blocks where they
	are used.
	(elf32_hppa_adjust_dynamic_symbol): Correct a comment.  Delay
	setting of vars until needed.
	(allocate_dynrelocs): Don't create a .plt entry without a reloc
	when symbol visibilty makes a function local.
	(elf32_hppa_finish_dynamic_symbol): Move expressions out of
	swap_reloca_out function calls.
	(elf32_hppa_relocate_section): Likewies.  Comment typo fix.
	(elf32_hppa_finish_dynamic_sections): Migrate common code out of
	switch statement.

	* elf32-i386.c (elf_i386_check_relocs): Update comment since we
	no longer allocate here.  Localise some vars to blocks where they
	are used.  Remove separate switch stmt for creating .got sec.
	(elf_i386_adjust_dynamic_symbol): Correct a comment.  Remove
	redundant casts and aborts.  Delay setting of vars until needed.
	(allocate_dynrelocs): Remove redundant casts and aborts.
	(elf_i386_size_dynamic_sections): Move comment.
	(elf_i386_finish_dynamic_symbol): Move expressions out of function
	calls.
	(elf_i386_relocate_section): Likewise.  Comment typo fix.
	(elf_i386_finish_dynamic_sections): Migrate common code out of
	switch statement.
	(elf_backend_* defines): Sort.

	* elf32-i386.c (allocate_dynrelocs): Don't create a .plt entry
	without a reloc when symbol visibilty makes a function local.

2001-09-27  Nick Clifton  <nickc@cambridge.redhat.com>
