@@ -6,6 +6,9 @@
 
 2001-09-28  Richard Henderson  <rth@redhat.com>
 
+	* elfxx-target.h [section_flags]: Add SEC_ARCH_BIT_0, SEC_SMALL_DATA,
+	SEC_MERGE, SEC_STRINGS.
+
 	* section.c (SEC_ARCH_BIT_0): New; replace unused SEC_BALIGN.
 	* bfd-in2.h: Rebuild.
 
